<resources>
    <string name="app_name">茄子快传</string>
    <string name="link_computer">连接电脑</string>
    <string name="web_page_spread">网页传</string>
    <string name="space_clean_up">空间清理</string>
    <string name="application_of_lock">应用锁</string>
    <string name="eggplant_replacement">茄子换机</string>
    <string name="setting">设置</string>
    <string name="check_version">检查版本</string>
    <string name="help_feed_back">帮助与反馈</string>
    <string name="about">关于</string>

    <string name="send">我要发送</string>
    <string name="receive">我要接收</string>

    <string-array name="titles">
        <item>文件</item>
        <item>视频</item>
        <item>应用</item>
        <item>图片</item>
        <item>音乐</item>
    </string-array>

    <string name="msg_empty">无新数据</string>
    <string name="error_tip">网络出错，请检查网络</string>
    
    <string name="type_classification">按文件类型分类</string>
    <string name="regime_classification">按文件路径分类</string>
    <string name="document">文档</string>
    <string name="compress">压缩文件</string>
    <string name="e_book">电子书</string>

    <string name="internal_storage_device">内部存储设备</string>
    <string name="empty_msg_tip">本地没有视频</string>
    <string name="feedback">意见反馈</string>
    <string name="transmission_problem">传输问题</string>
    <string name="transmission_break_slow_speed">传输断、速度慢</string>
    <string name="connection_problem">连接问题</string>
    <string name="can_not_find_not_even">找不到、连不上</string>
    <string name="storage_problem">存储问题</string>
    <string name="can_not_save_can_not_find">存不到、找不到</string>
    <string name="specific_type_problem">特定机型问题</string>
    <string name="model">MI、Nexus7</string>
    <string name="hotspot_issues">热点问题</string>
    <string-array name="hotspot_issues_array">
        <item>升级到新版本后无法正常收发？</item>
        <item>传输数度慢？</item>
        <item>传输过程中断？</item>
        <item>发送方选择接收方头像后无法连接？</item>
        <item>找不到周围的接收者？</item>
        <item>如何将文件保存到SD卡？</item>
        <item>启动茄子后多次闪退？</item>
        <item>小米手机安全设置方法</item>
    </string-array>
    <string name="general_settings">常规设置</string>
    <string name="file_storage_location">文件存储位置/内部存储设备/QieZi</string>
    <string name="wipe_cache">清空缓存</string>
    <string name="confirm_connection">连接前确认</string>
    <string name="data_network_protection">数据网络保护</string>
    <string name="update_information">仅在WI-FI网络更新资讯使用2G/3G/4G网络时不更新资讯信息</string>
    <string name="multi_language">多语言中文（中国）</string>
    <string name="advanced_etting">高级设置</string>
    <string name="local_net">传输时优先局域网,传输时，优先使用局域网进行连接，关闭则优先使用热点网络</string>
    <string name="show_hidden_files">显示隐藏文件选择文件时显示系统的隐藏文件</string>
    <string name="burn_after_installation">安装后即焚</string>
    <string name="transmission_channel">传输通道优化单通道</string>
    <string name="hotspot_encryption">热点加密加密后对方需升级到最新版本</string>
    <string name="hotspot_encryption">WiFi直连启用WiFi直连，连接更快捷（实验功能，存在不稳定性）</string>

</resources>
