<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/bottom_select_layout"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/id_ll_bellow"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_10"
                android:drawableLeft="@drawable/ic_type_index_bg"
                android:layout_marginLeft="@dimen/margin_left_10"
                android:drawablePadding="@dimen/padding_5"
                android:text="@string/type_classification" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_10">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_document" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/document" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="6项" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_10">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_compress" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/compress" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="114项" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_10">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_e_book" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/e_book" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="65项" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_above="@id/id_ll_bellow"
                android:background="@drawable/ic_divideline" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_10"
                android:drawableLeft="@drawable/ic_type_index_bg"
                android:drawablePadding="@dimen/padding_5"
                android:layout_marginLeft="@dimen/margin_left_10"
                android:text="@string/regime_classification" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10">

                <ImageView
                    android:id="@+id/id_iv_device"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_device" />

                <ImageView
                    android:id="@+id/id_iv_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_arrow" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toLeftOf="@+id/id_iv_arrow"
                    android:layout_toRightOf="@+id/id_iv_device"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/padding_left_10"
                    android:paddingRight="@dimen/padding_right_10">

                    <TextView
                        android:id="@+id/id_tv_device"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/internal_storage_device" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="12.09GB/24.48GB" />

                    <com.james.eggplantfastpass.ui.widget.ProportionView
                        android:id="@+id/id_proportion_view"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_below="@+id/id_tv_device" />
                </RelativeLayout>

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_above="@id/id_ll_bellow"
                android:background="@drawable/ic_divideline" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>